--- a/src/pug/layouts/home.pug
+++ b/src/pug/layouts/home.pug
@@ -25,11 +25,12 @@ html
 		
     #vk_community_messages
     script(type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js")
-    //- script(type='text/javascript', src='js/preloader.js')
-    script(type='text/javascript', src='js/nprogress.js')
+    //- script(type='text/javascript', src='js/preloader.js')    
     script(type='text/javascript', src='js/jquery.cslider.js')
     script(type='text/javascript', src='js/slider.js')
     script(type='text/javascript', src='js/vk.js')
+    script(type='text/javascript', src='js/nprogress.js')
+    script(type='text/javascript', src='js/nprog_my.js')
     
 
     block body_end
