--- a/src/pug/modules/articles/articles.pug
+++ b/src/pug/modules/articles/articles.pug
@@ -12,10 +12,10 @@ section.news2
                     .newsImage
                         img(src='imgs/news.png', alt='News Image')   
                     .newsTitle
-                        h2 ПК Сборка. Декабрь 2019
+                        h2 ПК Сборка. Январь 2020
                         small
                             i.far.fa-calendar-alt
-                            | 28 Декабря 2019
+                            | 20 Января 2020
                         p
                             | В ближайшее время будет дополнена информация в разделы, выложен анонс акций и скидок, будут появляться новости из мира IT-индустрии. Сохраняйте в закладки, чтобы не пропустить интересное. 
                         a(href='/articles01.html') Далее
